[CSS Shapes] A few calc() test failures in the shape-image-threshold parsing tests https://bugs.webkit.org/show_bug.cgi?id=135926

Reviewed by Dirk Schulze.

Source/WebCore:

shape-image-threshold is a Number, so it should be parsed as one. The
default parsing doesn't support calcs, but numbers do.

No new tests, fixes exitsing test to pass.

* css/DeprecatedStyleBuilder.cpp:
(WebCore::DeprecatedStyleBuilder::DeprecatedStyleBuilder): Use
    ApplyPropertyNumber instead of ApplyPropertyDefault for
    shape-image-threshold.

LayoutTests:

* TestExpectations: Remove Failure and Crash expectations.
* css3/shapes/shape-outside/values/shape-image-threshold-001-expected.txt:
    Proper expected results now that the test passes.
* css3/shapes/shape-outside/values/shape-image-threshold-001.html:
    Adding together calcs isn't valid, so move the addition inside of
    the calc expression. This will also be updated upstream.


Canonical link: https://commits.webkit.org/153926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172757 268f45cc-cd09-0410-ab3c-d52691b4dbfc